Remove maintainer specific config from IDE project config file

--- a/.saker.build.ide.project.config
+++ b/.saker.build.ide.project.config
@@ -6,33 +6,20 @@
         <build_dir>build</build_dir>
         <mirror_dir/>
         <require_ide_config>true</require_ide_config>
+        <use_clients_as_clusters>false</use_clients_as_clusters>
         <repositories>
             <s:array>
                 <s:obj>
                     <repo_id>nest</repo_id>
                     <classpath>
-                        <type>jar</type>
-                        <path>c:/Users/sipka/.nest/dist/nestrepository.jar</path>
-                        <connection>local</connection>
+                        <type>nest-repository-classpath</type>
                     </classpath>
                     <service>
-                        <type>serviceloader</type>
-                        <service_class>saker.build.runtime.repository.SakerRepositoryFactory</service_class>
+                        <type>nest-repository-service</type>
                     </service>
                 </s:obj>
             </s:array>
         </repositories>
-        <user_parameters>
-            <s:array>
-                <s:obj>
-                    <key>nest.server.offline</key>
-                    <val>true</val>
-                </s:obj>
-            </s:array>
-        </user_parameters>
-        <connections>
-            <s:array/>
-        </connections>
         <mounts>
             <s:array>
                 <s:obj>
@@ -58,8 +45,5 @@
                 </s:obj>
             </s:array>
         </script_configs>
-        <script_modelling_exclusions>
-            <s:array/>
-        </script_modelling_exclusions>
     </project-properties>
 </saker.build.ide.project.config>
